# cli-anything-geoserver

./: .gitignore  GEOSERVER.md  README.md  pyproject.toml  setup.py
.github/workflows/: ci.yml
cli_anything/geoserver/: README.md  __init__.py  __main__.py  geoserver_cli.py
cli_anything/geoserver/core/: export.py  project.py  session.py
cli_anything/geoserver/tests/: TEST.md  test_core.py  test_full_e2e.py
cli_anything/geoserver/utils/: geoserver_backend.py  repl_skin.py
