[project]
name = "cli-anything-geoserver"
version = "1.0.0"
description = "CLI harness for GeoServer geospatial server"
requires-python = ">=3.10"
dependencies = [
    "click>=8.0.0",
    "prompt-toolkit>=3.0.0",
    "requests>=2.28.0",
]

[project.scripts]
cli-anything-geoserver = "cli_anything.geoserver.geoserver_cli:main"

[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["cli_anything.*"]

[tool.pytest.ini_options]
testpaths = ["cli_anything/geoserver/tests"]

[dependency-groups]
dev = [
    "pytest>=9.0",
    "ruff>=0.9",
]

[tool.ruff]
target-version = "py310"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"cli_anything/geoserver/utils/repl_skin.py" = ["F841", "F401"]
